src/components/lane-stage/lane-segment.module.css
.container {
  display: grid;
  width: 100%;
  position: absolute;
  top: 0;
  grid-template-columns: repeat(
      calc(var(--end-unit) - var(--start-unit)),
      minmax(0, 1fr)
    );
  /* Segment height corresponds to LANE_SEGMENT_DURATION_MS.
     Speed is 1 container height per 3000ms. */
  height: calc(
    calc(100dvh - var(--header-height) - var(--footer-height)) *
    (var(--segment-duration-ms) / 3000)
  );
  will-change: transform;
}

.note {
  position: absolute;
  width: 100%;
  border-radius: var(--note-radius);
  border: 1px solid
    color-mix(
      in srgb,
      currentColor calc(var(--note-border-opacity) * 100%),
      transparent
    );
  box-shadow: var(--note-shadow);
  transition: opacity 300ms;
  min-width: 0;

  background-color: color-mix(
    in srgb,
    currentColor calc(20% + 20% * var(--is-black)),
    transparent
  );
}

